--- a/UI/client-app/public/index.html
+++ b/UI/client-app/public/index.html
@@ -5,10 +5,20 @@
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
+
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="Join our trip to South Lake Tahoe!"
     />
+
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta property="og:title" content="Ronde - Lake Tahoe" />
+    <meta property="og:description" content="Join Our Trip to South Lake Tahoe!"/>
+    <meta property="og:image" content="https://ronde.app/FullArea.jpg" />
+    <meta property="og:url" content="https://ronde.app/trips/2" />
+        
+    <meta property="twitter:image" content="https://ronde.app/FullArea.jpg">
+ 
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
@@ -24,7 +34,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <title>Ronde - Lake Tahoe</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
